--- a/infografía_plagio_ia.html
+++ b/infografía_plagio_ia.html
@@ -9,15 +9,18 @@
   
   <style>
     :root {
-      /* Paleta tecnológica: Azul y Rojo (con el rojo solo para acentos) */
       --header-start: #0078D7;          
       --header-end:   #E81123;          
       --body-gradient-start: #e0f7fa;   
       --body-gradient-end:   #ffebee;   
-      --card-bg-start: #ffffff;      --card-bg-end:   #fefefe;      --card-hover-border: #E81123;     
+      --card-bg-start: #ffffff;
+      --card-bg-end:   #fefefe;
+      --card-hover-border: #E81123;     
       --tooltip-bg: #005a9e;            
       --tooltip-color: #ffffff;         
-      --footer-bg: #f1f1f1;      --footer-text: #333333;      --text-default: #333333;          
+      --footer-bg: #f1f1f1;
+      --footer-text: #333333;
+      --text-default: #333333;          
       --card-title-color: #0078D7;      
     }
     
