--- a/infografía_plagio_ia.html
+++ b/infografía_plagio_ia.html
@@ -2,7 +2,8 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8">	
+	<link rel="icon" type="image/png" href="favicon.png">
 	<title>Infografía Interactiva: Detección de Plagio con IA</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
