--- a/ética-detección-plagio.html
+++ b/ética-detección-plagio.html
@@ -10,30 +10,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Responsive */
-        @media (max-width:600px) {
-
+        @media (max-width: 600px) {
             html {
                 font-size: 14px;
-                /* 14px */
             }
 
             header h1 {
                 font-size: 2rem;
-                /* 28px */
             }
 
             p {
                 font-size: 1rem;
-                /* 14px */
-                /* text-align: justify; */
             }
 
             .tooltip {
-                top: 80px;
+                padding: 1rem;
+                width: 95%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            body::before {
+                content: "Modo móvil activo";
+                display: block;
+                background: yellow;
+                color: black;
+                text-align: center;
+                padding: 0.5rem;
+                font-weight: bold;
             }
         }
-
 
         :root {
             --header-start: #0078D7;
@@ -150,31 +156,11 @@
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
-        /* .tooltip {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0.9);
-            background: var(--tooltip-bg);
-            color: var(--tooltip-color);
-            padding: 1.5rem 2rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-            max-width: 90%;
-            width: 500px;
-            opacity: 0;
-            pointer-events: none;
-            transition: all 0.3s ease;
-        } */
-
         .tooltip {
             position: fixed;
-            top: 0;
-            bottom: 0;
+            top: 55%;
             left: 50%;
-            transform: translateX(-50%) scale(0.9);
-            margin: auto 0;
+            transform: translate(-50%, -50%);
             background: var(--tooltip-bg);
             color: var(--tooltip-color);
             padding: 1.5rem 2rem;
@@ -183,16 +169,15 @@
             z-index: 1000;
             max-width: 90%;
             width: 500px;
-            height: max-content;
+            max-height: 80vh;
+            overflow-y: auto;
             opacity: 0;
             pointer-events: none;
             transition: all 0.3s ease;
         }
 
-
         .tooltip.active {
             opacity: 1;
-            transform: translate(-50%, -50%) scale(1);
             pointer-events: auto;
         }
 
@@ -326,9 +311,9 @@
     <div class="tooltip" id="tooltip1">
         <span class="close" onclick="closeTooltip()">&times;</span>
         <p>
-            <strong>⚠️ Riesgo:</strong> Falsos positivos en textos de hablantes no nativos o con variaciones
+            <strong>⚠️Riesgo:</strong> Falsos positivos en textos de hablantes no nativos o con variaciones
             dialectales.<br><br>
-            <strong>✅ Práctica:</strong> Ajustar dinámicamente los umbrales de similitud y configurar perfiles
+            <strong>✅Práctica:</strong> Ajustar dinámicamente los umbrales de similitud y configurar perfiles
             lingüísticos
             por idioma o región.
         </p>
@@ -357,8 +342,8 @@
     <div class="tooltip" id="tooltip4">
         <span class="close" onclick="closeTooltip()">&times;</span>
         <p>
-            <strong>⚠️ Riesgo:</strong> Usuarios desconocen los criterios y parámetros que usa el detector.<br><br>
-            <strong>✅ Práctica:</strong> Publicar versiones de los algoritmos, umbrales y corpus de referencia
+            <strong>⚠️Riesgo:</strong> Usuarios desconocen los criterios y parámetros que usa el detector.<br><br>
+            <strong>✅Práctica:</strong> Publicar versiones de los algoritmos, umbrales y corpus de referencia
             en
             formato
             abierto (JSON‑LD), en otras palabras, no se trata de mantener el algoritmo como una "caja negra",
